--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,32 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Sizes -->
+    <dimen name="size_small_24">24dp</dimen>
+    <dimen name="size_medium_56">56dp</dimen>
+    <dimen name="size_large_72">72dp</dimen>
+    
+    <!-- Spaces -->
+    <dimen name="spacing_small_8">8dp</dimen>
+    <dimen name="spacing_normal_16">16dp</dimen>
+    <dimen name="spacing_medial_24">24dp</dimen>
+    <dimen name="spacing_medium_32">32dp</dimen>
+    <dimen name="spacing_large_56">56dp</dimen>
+    <dimen name="spacing_larger_72">72dp</dimen>
+
+    <!-- Typography -->
+    <dimen name="typography_small_12">12sp</dimen>
+    <dimen name="typography_regular_14">14sp</dimen>
+    <dimen name="typography_regular_16">16sp</dimen>
+    <dimen name="typography_medium_20">20sp</dimen>
+    <dimen name="typography_large_24">24sp</dimen>
+    <dimen name="typography_large_34">34sp</dimen>
+    <dimen name="typography_small_45">45sp</dimen>
+    <dimen name="typography_small_56">56sp</dimen>
+    <dimen name="typography_small_112">112sp</dimen>
+
+
+
+
 </resources>
