--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="color_primary">#3F51B5</color>
     <color name="color_primaryDark">#303F9F</color>
     <color name="color_accent">#FF4081</color>
+
+    <color name="gray">#5d5d5d</color>
+    <color name="light_gray">#9c9c9c</color>
+
 </resources>
