--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,5 +30,8 @@
     <dimen name="typography_small_112">112sp</dimen>
 
     <dimen name="line_size">2dp</dimen>
+    <dimen name="picture_size">60dp</dimen>
+    <dimen name="profile_image_size">256dp</dimen>
+    <dimen name="fab_right_space">8dp</dimen>
 
 </resources>
