--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,14 +6,18 @@
     <!-- Sizes -->
     <dimen name="size_zero_0">0dp</dimen>
     <dimen name="size_small_24">24dp</dimen>
+    <dimen name="size_small_36">36dp</dimen>
+    <dimen name="size_medium_48">48dp</dimen>
     <dimen name="size_medium_56">56dp</dimen>
     <dimen name="size_large_72">72dp</dimen>
     <dimen name="size_large_96">96dp</dimen>
 
     <!-- Spaces -->
+    <dimen name="spacing_small_4">4dp</dimen>
     <dimen name="spacing_small_8">8dp</dimen>
     <dimen name="spacing_normal_16">16dp</dimen>
     <dimen name="spacing_medial_24">24dp</dimen>
+    <dimen name="spacing_medium_28">28dp</dimen>
     <dimen name="spacing_medium_32">32dp</dimen>
     <dimen name="spacing_large_56">56dp</dimen>
     <dimen name="spacing_larger_72">72dp</dimen>
@@ -33,5 +37,7 @@
     <dimen name="picture_size">60dp</dimen>
     <dimen name="profile_image_size">256dp</dimen>
     <dimen name="fab_right_space">8dp</dimen>
+    <dimen name="placeholder_photo_size_90">90dp</dimen>
+    <dimen name="corner_radius_2">2dp</dimen>
 
 </resources>
