--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -27,7 +27,7 @@
             android:id="@+id/user_name_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Макеев Михаил"
+            android:text="Сорокин Михаил"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:fontFamily="sans-serif-medium"/>
