--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:id="@+id/coordinator_layout">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                 xmlns:tools="http://schemas.android.com/tools"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:background="@color/gray_background"
-                 android:fitsSystemWindows="true"
-                 tools:ignore="contentDescription">
+    android:id="@+id/coordinator_layout"
+    android:fitsSystemWindows="true"
+    tools:ignore="contentDescription"
+    android:background="@color/gray_background">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/gray_background">
 
         <ImageView
             android:layout_width="match_parent"
@@ -21,124 +22,80 @@
             android:scaleType="centerCrop"
             android:src="@drawable/login_bg"/>
 
-        <LinearLayout
-            android:id="@+id/authorization_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_marginLeft="@dimen/size_large_72"
-            android:layout_marginRight="@dimen/size_large_72"
-            android:background="@drawable/auth_bg">
+            <android.support.v7.widget.CardView
+                android:id="@+id/authorization_box"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/corner_radius_2"
+                app:cardElevation="@dimen/spacing_small_8"
+                app:cardPreventCornerOverlap="false"
+                style="@style/authorization_CV_Box">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_small_8"
-                android:layout_marginRight="@dimen/spacing_medium_32"
-                android:layout_marginTop="@dimen/spacing_medium_32"
-                android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="@dimen/spacing_small_4"
-                    android:layout_height="match_parent"
-                    android:background="@color/color_accent"/>
-                <TextView
-                    android:id="@+id/auth_email_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/spacing_medium_28"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Регистрация"
-                    android:textColor="@color/color_accent"
-                    android:textSize="@dimen/typography_medium_20"/>
-            </LinearLayout>
+                    style="@style/authorization_LL_All">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/size_medium_48"
-                android:gravity="bottom"
-                android:layout_marginTop="@dimen/spacing_small_8"
-                android:layout_marginLeft="@dimen/spacing_medium_28"
-                android:layout_marginRight="@dimen/spacing_medium_28"
-                android:layout_marginBottom="@dimen/spacing_small_8">
+                    <LinearLayout
+                        style="@style/authorization_LL_Email">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <View
+                            android:layout_width="@dimen/spacing_small_4"
+                            android:layout_height="match_parent"
+                            android:background="@color/color_accent" />
 
-                    <EditText
-                        android:id="@+id/auth_login_editText"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="sans-serif-condensed"
-                        android:textColor="@color/gray"
-                        android:textColorHint="@color/light_gray"
-                        android:textSize="@dimen/typography_regular_14"
-                        android:hint="E-mail"
-                        android:inputType="textEmailAddress"
-                        android:text="michael.sorokin@gmail.com"/>
+                        <TextView
+                            android:id="@+id/auth_email_editText"
+                            android:text="@string/auth.enter_string"
+                            style="@style/authorization_TV_Email"/>
+                    </LinearLayout>
 
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
+                    <LinearLayout
+                        style="@style/authorization_LL_Login">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/size_medium_48"
-                android:gravity="bottom"
-                android:layout_marginTop="@dimen/spacing_small_8"
-                android:layout_marginLeft="@dimen/spacing_medium_28"
-                android:layout_marginRight="@dimen/spacing_medium_28"
-                android:layout_marginBottom="@dimen/spacing_small_8">
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                    <EditText
-                        android:id="@+id/password_editText"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="sans-serif-condensed"
-                        android:textColor="@color/gray"
-                        android:textColorHint="@color/light_gray"
-                        android:textSize="@dimen/typography_regular_14"
-                        android:hint="Password"
-                        android:inputType="textPassword"
-                        android:text="sma940112"/>
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
+                            <EditText
+                                android:id="@+id/auth_login_editText"
+                                android:hint="@string/hint.login"
+                                style="@style/authorization_ET_Login"/>
 
-            <android.support.v7.widget.ButtonBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_small_8"
-                android:layout_marginLeft="@dimen/spacing_medium_28"
-                android:layout_marginRight="@dimen/spacing_medium_28"
-                android:layout_marginTop="@dimen/spacing_medium_28"
-                android:gravity="center">
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
-                <Button
-                    android:id="@+id/auth_enter_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/size_small_36"
-                    android:background="@drawable/auth_button_bg"
-                    android:text="Ввод"
-                    android:textColor="@color/white"/>
+                    <LinearLayout
+                        style="@style/authorization_LL_Password">
 
-            </android.support.v7.widget.ButtonBarLayout>
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/forgot_pass_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_medium_28"
-                android:layout_marginLeft="@dimen/spacing_medium_28"
-                android:layout_marginRight="@dimen/spacing_medium_28"
-                android:layout_marginTop="@dimen/spacing_small_8"
-                android:fontFamily="sans-serif-condensed"
-                android:gravity="center"
-                android:text="Забыли пароль?"
-                android:textColor="@color/light_gray"/>
-        </LinearLayout>
+                            <EditText
+                                android:id="@+id/password_editText"
+                                android:hint="@string/hint.password"
+                                style="@style/authorization_ET_Password"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <CheckBox
+                        android:id="@+id/login_checkbox"
+                        android:text="@string/save_email_request"
+                        style="@style/authorization_CB_SaveRequest"/>
+
+                    <android.support.v7.widget.ButtonBarLayout
+                        style="@style/authorization_BL_Enter">
+
+                        <Button
+                            android:id="@+id/auth_enter_button"
+                            android:text="@string/auth.enter_string"
+                            style="@style/authorization_Btn_Login"/>
+
+                    </android.support.v7.widget.ButtonBarLayout>
+
+                    <TextView
+                        android:id="@+id/forgot_pass_button"
+                        android:text="@string/auth.forgot_password"
+                        style="@style/authorization_TV_ForgotPwd"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
     </FrameLayout>
-
 </android.support.design.widget.CoordinatorLayout>
