--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <declare-styleable name="AspectRatioImageView">
+        <attr name="aspect_ratio" format="float"/>
+    </declare-styleable>
+</resources>
