--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,5 +39,6 @@
     <dimen name="fab_right_space">8dp</dimen>
     <dimen name="placeholder_photo_size_90">90dp</dimen>
     <dimen name="corner_radius_2">2dp</dimen>
+    <dimen name="auth_card_240">240dp</dimen>
 
 </resources>
